--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_screenutil: ^5.9.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
-  flutter_native_splash: ^2.3.11
-  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
+  assets:
+  - assets/images/
