Finish login & register logic

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,9 +10,18 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_screenutil: ^5.9.0
+  dio: ^5.4.2+1
+  flutter_bloc: ^8.1.5
+  fluttertoast: ^8.2.4
+  shared_preferences: ^2.2.2
+  dartz: ^0.10.1
+  get_it: ^7.6.7
+  injectable: ^2.3.5
 
 dev_dependencies:
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.9
+  injectable_generator: ^2.4.2
 
 flutter:
   uses-material-design: true
