--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   injectable: ^2.3.5
   cached_network_image: ^3.3.1
   carousel_slider: ^4.2.1
+  readmore: ^3.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
