--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   cached_network_image: ^3.3.1
   carousel_slider: ^4.2.1
   readmore: ^3.0.0
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_lints: ^2.0.0
